Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58044

Missing QPlatformWindow::startSystemMove()

    XMLWordPrintable

Details

    • 6f03740a19cbba1b050466e4be27410c1f64bab4

    Description

      There is QPlatformWindow::startSystemResize(), but there is no QPlatformWindow::startSystemMove().
      It's not possible to implement startSystemMove() correctly on X11 outside of Qt, because in case of touch events it requires access to deep internals in the xcb plugin.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            paeglis Gatis Paeglis
            avolkov Alexander Volkov
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes